--- a/.gitignore
+++ b/.gitignore
@@ -191,4 +191,6 @@ cython_debug/
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
-.cursorindexingignore
+.cursorindexing
+
+Agenten-Backend_Ubuntu/.openai_key
