Variante mit kivy eingebaut

--- a/Agenten-Backend_Ubuntu/requirements.txt
+++ b/Agenten-Backend_Ubuntu/requirements.txt
@@ -1,6 +1,11 @@
 fastapi
-uvicorn
-langchain>=0.1.0
+uvicorn[standard]
+
+# LangChain
+langchain
+langchain-community
+langchain-openai
+
 openai
 duckduckgo-search
 sympy
